--- a/starter/app/src/main/res/values/strings.xml
+++ b/starter/app/src/main/res/values/strings.xml
@@ -3,10 +3,10 @@
     <string name="app_description">Download files from Internet</string>
     <string name="action_settings">Settings</string>
 
-
     <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
     <string name="notification_description">The Project 3 repository is downloaded</string>
     <string name="notification_button">See changes</string>
+    <string name="notification_action">Check the status</string>
 
     <string name="button_name">Click me</string>
     <string name="button_loading">We are loading </string>
@@ -16,4 +16,7 @@
     <string name="glide_image_loading_library_by_bumptech">Glide - Image Loading Library by BumpTech</string>
     <string name="download">Download</string>
     <string name="please_select_the_file_to_downlaod">Please select the file to downlaod</string>
+    <string name="channel_name">name_of_channel</string>
+    <string name="channel_description">description_of_channel</string>
+    <string name="loadapp">LoadApp</string>
 </resources>
